All the pages are completed with all my contents.

--- a/gallery.html
+++ b/gallery.html
@@ -17,11 +17,11 @@
 <body">
 
 <!-- This the navigation bar on the top with my name  -->
-<nav class="navbar navbar-expand-lg sticky-top" id="nav">
+<nav class="navbar navbar-expand-lg navbar-light sticky-top" id="nav">
     <div class="container-fluid" id="nav-space">
         <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-bars"></i>
             </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto" id="nav-list">
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="talk.html">TALKS</a>
                 </li>
                 <li class=" line nav-item ">
-                    <a class="nav-link" href="gallery.html">GALLERY</a>
+                    <a class="nav-link" href="gallery.html" style="font-weight: bold;">GALLERY</a>
                 </li>
                 <li class="line nav-item">
                     <a class="nav-link" href="resume.html">RESUME</a>
@@ -57,27 +57,10 @@
     </div>
 </div>
 
-<!-- This is for the red option on the top -->
-<!-- <div class="containe-fluid">
-    <div class="row justify-content-center">
-        <div class="col-9 text-center">
-            <div class="btn-group">
-                <button type="button" class="btn btn-primary">All</button>
-                <button type="button" class="btn btn-primary">Family</button>
-                <button type="button" class="btn btn-primary">Friends</button>
-                <button type="button" class="btn btn-primary">Events</button>
-                <button type="button" class="btn btn-primary">Places</button>
-                <button type="button" class="btn btn-primary">Course</button>
-                <button type="button" class="btn btn-primary">Book</button>
-            </div>
-        </div>
-    </div>
-</div> -->
-
 <!-- This is for the gallary layout -->
 <div class="container-fluid mt-5">
     <div class="row justify-content-center">
-        <div class=" col-d-12 col-5 col-md-5 col-lg-3">
+        <div class=" col-d-12 col-md-5 col-lg-3">
             <div class="card">
                 <div class="card-container">
                     <img class="card-img-top img-fluid" src="./assets/images/little bro.jpg" alt="brother pics">
@@ -115,7 +98,7 @@
                 </div>
             </div>
         </div>   
-        <div class="col-d-12 col-5 col-md-5 col-lg-3">
+        <div class="col-d-12 col-md-5 col-lg-3">
             <div class="card">
                 <div class="card-container">
                     <img class="card-img-top img-fluid" src="./assets/images/family.jpg"alt="family photo" >
@@ -155,7 +138,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-d-12 col-5 col-md-5 col-lg-3">
+        <div class="col-d-12 col-md-5 col-lg-3">
             <div class="card">
                 <div class="card-container">
                     <img class="card-img-top img-fluid" src="assets/images/friends.jpg" alt="">
@@ -203,16 +186,12 @@
             <a href="">LICENSE: CC-BY-SA <br> <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i> </a><br>  
         </p>
         <p class="footer-text">
-            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>.
-        <div class="text-end">
+            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart"></i>.
             <span class="right-icon" aria-hidden="true">
                 <a href="#" id="back_to_top">
-                    <span class="up_icon">
                         <i class="fas fa-chevron-up fa-2x"></i>
-                    </span>
                 </a>
             </span>
-        </div>
         </p>
     </footer>
 </div>
