--- a/blog2.html
+++ b/blog2.html
@@ -16,11 +16,11 @@
 </head>
 <body>
 <!-- The navigation bar -->
-<nav class="navbar navbar-expand-lg sticky-top" id="nav">
+<nav class="navbar navbar-expand-lg navbar-light sticky-top" id="nav">
     <div class="container-fluid" id="nav-space">
         <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-bars"></i>
             </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto" id="nav-list">
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="contact.html">ABOUT</a>
                 </li>
                 <li class="line nav-item active">
-                    <a class="nav-link active" href="blog.html">BLOG</a>
+                    <a class="nav-link active" href="blog.html" style="font-weight: bold;">BLOG</a>
                 </li>
                 <li class=" line nav-item">
                     <a class="nav-link" href="talk2.html">TALKS</a>
@@ -129,16 +129,12 @@
             <a href="">LICENSE: CC-BY-SA <br> <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i> </a><br>  
         </p>
         <p class="footer-text">
-            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>.
-        <div class="text-end">
+            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart"></i>.
             <span class="right-icon" aria-hidden="true">
                 <a href="#" id="back_to_top">
-                    <span class="up_icon">
                         <i class="fas fa-chevron-up fa-2x"></i>
-                    </span>
                 </a>
             </span>
-        </div>
         </p>
     </footer>
 </div>
