--- a/resume.html
+++ b/resume.html
@@ -16,11 +16,11 @@
 </head>
 <body>
     <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg sticky-top" id="nav">
+<nav class="navbar navbar-expand-lg navbar-light sticky-top" id="nav">
     <div class="container-fluid" id="nav-space">
         <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <i class="fas fa-bars"></i>
         </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" id="nav-list">
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="gallery.html">GALLERY</a>
                     </li>
                     <li class="line nav-item">
-                        <a class="nav-link" href="resume.html">RESUME</a>
+                        <a class="nav-link" href="resume.html" style="font-weight: bold;">RESUME</a>
                     </li>
                     <li class="line nav-item">
                         <a class="nav-link" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
@@ -140,7 +140,7 @@
                 <div class="card-body">
                     <h5 class="card-resume-title">Ambassader of Peace</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Addis Ababa University Jan 2019</h6>
-                    <p class="ms-3">A one Semister Educational and Experiment program held by our Instracter</p>
+                    <p class="ms-3 t">A one Semister Educational and Experiment program held by our Instracter</p>
                 </div>
             </div>
         </div>
@@ -154,16 +154,12 @@
             <a href="">LICENSE: CC-BY-SA <br> <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i> </a><br>  
         </p>
         <p class="footer-text">
-            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>.
-        <div class="text-end">
+            © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart"></i>.
             <span class="right-icon" aria-hidden="true">
                 <a href="#" id="back_to_top">
-                    <span class="up_icon">
                         <i class="fas fa-chevron-up fa-2x"></i>
-                    </span>
                 </a>
             </span>
-        </div>
         </p>
     </footer>
 </div>
